--- a/pathetic-model/pom.xml
+++ b/pathetic-model/pom.xml
@@ -105,7 +105,7 @@
         </dependency>
         <dependency>
             <groupId>de.metaphoriker</groupId>
-            <artifactId>pathetic-nms</artifactId>
+            <artifactId>pathetic-provider</artifactId>
             <version>3.3.1</version>
             <scope>compile</scope>
         </dependency>
