--- a/pathetic-provider/pom.xml
+++ b/pathetic-provider/pom.xml
@@ -11,7 +11,7 @@
 
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>pathetic-nms</artifactId>
+    <artifactId>pathetic-provider</artifactId>
     <version>3.3.1</version>
 
     <dependencies>
