--- a/pathetic-provider/spigot/pom.xml
+++ b/pathetic-provider/spigot/pom.xml
@@ -11,4 +11,134 @@
     </parent>
 
     <artifactId>spigot</artifactId>
+    <version>3.3.1</version>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>pathetic-api</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_21_R3</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_21_R2</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_21_R1</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_20_R4</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_20_R3</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_20_R2</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_20_R1</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_19_R3</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_19_R2</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_18_R2</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_18</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_17</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_16</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_15</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_12</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>v1_8</artifactId>
+            <version>3.3.1</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 </project>
