--- a/pathetic-provider/spigot/v1_17/pom.xml
+++ b/pathetic-provider/spigot/v1_17/pom.xml
@@ -6,7 +6,7 @@
         <artifactId>pathetic-main</artifactId>
         <groupId>de.metaphoriker</groupId>
         <version>3.3.1</version>
-        <relativePath>../../pom.xml</relativePath>
+        <relativePath>../../../pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
