--- a/pathetic-engine/pom.xml
+++ b/pathetic-engine/pom.xml
@@ -9,7 +9,7 @@
         <version>3.3.1</version>
     </parent>
 
-    <artifactId>pathetic-model</artifactId>
+    <artifactId>pathetic-engine</artifactId>
     <version>3.3.1</version>
 
     <build>
