--- a/pathetic-mapping/pom.xml
+++ b/pathetic-mapping/pom.xml
@@ -33,7 +33,7 @@
     <dependencies>
         <dependency>
             <groupId>de.metaphoriker</groupId>
-            <artifactId>pathetic-model</artifactId>
+            <artifactId>pathetic-engine</artifactId>
             <version>3.3.1</version>
             <scope>compile</scope>
         </dependency>
