--- a/pathetic-example/pom.xml
+++ b/pathetic-example/pom.xml
@@ -69,6 +69,8 @@
         <dependency>
             <groupId>org.spigotmc</groupId>
             <artifactId>spigot-api</artifactId>
+            <version>1.21.4-R0.1-SNAPSHOT</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>de.metaphoriker</groupId>
