chore: important changes to the structure

--- a/pathetic-bukkit/pom.xml
+++ b/pathetic-bukkit/pom.xml
@@ -68,6 +68,25 @@
             <groupId>de.metaphoriker</groupId>
             <artifactId>pathetic-engine</artifactId>
             <version>3.3.1</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.projectlombok</groupId>
+                    <artifactId>lombok</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.guava</groupId>
+                    <artifactId>guava</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>de.metaphoriker</groupId>
+            <artifactId>resolver</artifactId>
+            <version>3.3.1</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
