--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,7 @@
         <module>pathetic-bukkit/pathetic-provider/spigot/v1_21_R1</module>
         <module>pathetic-bukkit/pathetic-provider/spigot/v1_21_R2</module>
         <module>pathetic-bukkit/pathetic-provider/spigot/v1_21_R3</module>
+        <module>pathetic-bukkit/pathetic-provider/resolver</module>
     </modules>
 
     <reporting>
