--- a/pathetic-bukkit/pathetic-example/pom.xml
+++ b/pathetic-bukkit/pathetic-example/pom.xml
@@ -8,6 +8,7 @@
         <artifactId>pathetic-main</artifactId>
         <groupId>de.metaphoriker</groupId>
         <version>3.3.1</version>
+        <relativePath>../../pom.xml</relativePath>
     </parent>
 
     <artifactId>pathetic-example</artifactId>
