--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -65,4 +65,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: pathetic-${{ fromJSON(steps.determine.outputs.result).pr }}
-          path: pathetic-example/target/pathetic-example-*-SNAPSHOT.jar
+          path: pathetic-bukkit/pathetic-example/target/pathetic-example.jar
